<resources>
    <string name="app_name">HealthAndFitness</string>
    <string name="title_activity_dietchart">DietchartActivity</string>
    <string name="my_new_diet_chart">My New Diet Chart</string>
    <string name="breakfast">BreakFast</string>
    <string name="supper">Supper</string>
    <string name="lunch">Lunch</string>
    <string name="snack_time">Snack Time</string>
    <string name="dinner">Dinner</string>
    <string name="chart_id">Chart Id</string>
    <string name="add_chart">Add Chart</string>
</resources>
